<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/textLinearView"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_height="500dp">
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_error_icon"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:visibility="visible"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/hind_siliguri_font"
                    android:gravity="center"
                    android:text="@string/no_products_found"
                    android:textColor="@color/error_text_color_product_pages"
                    android:textColorHint="#6E8697"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/recyclersLinearView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/productsRecyclerView"
                    android:layout_width="match_parent"
                    android:overScrollMode="never"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"/>
                <TextView
                    android:id="@+id/customOrderTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hind_siliguri_font"
                    android:gravity="center"
                    android:background="@color/divider_bg_color_1"
                    android:text="@string/custom_order"
                    android:textColor="@color/divider_text_color_1"
                    android:textSize="14sp"
                    android:padding="4dp"
                    android:textStyle="bold"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/customOrderRecyclerView"
                    android:overScrollMode="never"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"/>
                <TextView
                    android:id="@+id/medicineOrderTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hind_siliguri_font"
                    android:gravity="center"
                    android:background="@color/divider_bg_color_1"
                    android:text="@string/medicine_order"
                    android:textColor="@color/divider_text_color_1"
                    android:textSize="14sp"
                    android:padding="4dp"
                    android:textStyle="bold"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/medicineRecyclerView"
                    android:layout_width="match_parent"
                    android:overScrollMode="never"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"/>
                <TextView
                    android:id="@+id/parcelOrderTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hind_siliguri_font"
                    android:gravity="center"
                    android:background="@color/divider_bg_color_1"
                    android:text="@string/parcel_order"
                    android:textColor="@color/divider_text_color_1"
                    android:textSize="14sp"
                    android:padding="4dp"
                    android:textStyle="bold"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/parcelRecyclerView"
                    android:overScrollMode="never"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        app:backgroundTint="@color/btn_bg_color_phone_auth_page"
        android:layout_height="wrap_content"
        android:text="@string/order_now"
        android:paddingStart="30dp"
        android:visibility="gone"
        android:textColor="@color/white"
        android:fontFamily="@font/hind_siliguri_font"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawableTint="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="80dp"/>
</RelativeLayout>
