<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_activity_navigation"
    app:startDestination="@id/homeFragment">

    <action
        android:id="@+id/action_homeFragment_self"
        app:destination="@id/homeFragment"
        app:launchSingleTop="true"
        app:popUpTo="@+id/home_activity_navigation"
        app:popUpToInclusive="true"/>
    <fragment
        android:id="@+id/homeFragment"
        android:name="arpan.delivery.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_productsFragment"
            app:destination="@id/productsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_homeFragment_to_offersFragment"
            app:destination="@id/offersFragment" />
        <action
            android:id="@+id/action_homeFragment_to_medicineFragment"
            app:destination="@id/medicineFragment" />
        <action
            android:id="@+id/action_homeFragment_to_pickUpDropFragment"
            app:destination="@id/pickUpDropFragment" />
        <action
            android:id="@+id/action_homeFragment_to_parcelFragment"
            app:destination="@id/parcelFragment" />
        <action
            android:id="@+id/action_homeFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
        <action
            android:id="@+id/action_homeFragment_to_orderHistoryFragment"
            app:destination="@id/orderHistoryFragment" />
        <action
            android:id="@+id/action_homeFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_homeFragment_to_customOrderFragment"
            app:destination="@id/customOrderFragment" />
        <action
            android:id="@+id/action_homeFragment_to_oldOrderListFragment"
            app:destination="@id/oldOrderListFragment" />
    </fragment>
    <fragment
        android:id="@+id/productsFragment"
        android:name="arpan.delivery.ui.home.ProductsFragment"
        android:label="fragment_products"
        tools:layout="@layout/fragment_products" >
        <action
            android:id="@+id/action_productsFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <argument
            android:name="shop_key"
            app:argType="string"
            android:defaultValue=""/>
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="arpan.delivery.ui.fragments.SettingsFragment"
        android:label="fragment_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_settingsFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/cartFragment"
        android:name="arpan.delivery.ui.cart.CartFragment"
        android:label="fragment_cart"
        tools:layout="@layout/fragment_cart" >
        <action
            android:id="@+id/action_cartFragment_to_orderFragment"
            app:destination="@id/orderFragment" />
        <action
            android:id="@+id/action_cartFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_cartFragment_to_homeFragment_clearTop"
            app:destination="@id/homeFragment"
            app:launchSingleTop="true"
            app:popUpTo="@+id/home_activity_navigation"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_cartFragment_self"
            app:destination="@id/cartFragment"
            app:launchSingleTop="true"
            app:popUpTo="@+id/home_activity_navigation"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="arpan.delivery.ui.home.SearchFragment"
        android:label="fragment_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_searchFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/offersFragment"
        android:name="arpan.delivery.ui.home.OffersFragment"
        android:label="@string/offers"
        tools:layout="@layout/fragment_offers" >
        <action
            android:id="@+id/action_offersFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/medicineFragment"
        android:name="arpan.delivery.ui.custom.MedicineFragment"
        android:label="@string/medicine"
        tools:layout="@layout/fragment_medicine" >
        <action
            android:id="@+id/action_medicineFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/parcelFragment"
        android:name="arpan.delivery.ui.custom.ParcelFragment"
        android:label="@string/parcel"
        tools:layout="@layout/fragment_parcel" >
        <action
            android:id="@+id/action_parcelFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/pickUpDropFragment"
        android:name="arpan.delivery.ui.custom.PickUpDropFragment"
        android:label="@string/pick_up_and_drop"
        tools:layout="@layout/fragment_pick_up_drop" >
        <action
            android:id="@+id/action_pickUpDropFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/orderFragment"
        android:name="arpan.delivery.ui.order.OrderFragmentNew"
        android:label="fragment_order"
        tools:layout="@layout/fragment_order_new" >
        <action
            android:id="@+id/action_orderFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
        <action
            android:id="@+id/action_orderFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:launchSingleTop="true"
            app:popUpTo="@+id/home_activity_navigation"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_orderFragment_to_OrderHistoryFragment"
            app:destination="@id/orderHistoryFragment"
            app:popUpTo="@+id/home_activity_navigation"/>
    </fragment>
    <fragment
        android:id="@+id/orderHistoryFragment"
        android:name="arpan.delivery.ui.order.OrderHistoryFragmentNew"
        android:label="fragment_order_history"
        tools:layout="@layout/fragment_order_history_new" >
        <action
            android:id="@+id/action_orderHistoryFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:launchSingleTop="true"
            app:popUpTo="@+id/home_activity_navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="arpan.delivery.ui.fragments.ProfileFragment"
        android:label="@string/my_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_profileFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/customOrderFragment"
        android:name="arpan.delivery.ui.custom.CustomOrderFragment"
        android:label="@string/custom_order"
        tools:layout="@layout/fragment_custom_order" >
        <action
            android:id="@+id/action_customOrderFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/oldOrderListFragment"
        android:name="arpan.delivery.ui.order.OldOrderListFragment"
        android:label="fragment_old_order_list_fragment"
        tools:layout="@layout/fragment_old_order_list_fragment" >
        <action
            android:id="@+id/action_oldOrderListFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutArpan"
        android:name="arpan.delivery.ui.fragments.AboutArpan"
        android:label="fragment_about_arpan"
        tools:layout="@layout/fragment_about_arpan" />
    <fragment
        android:id="@+id/beClient"
        android:name="arpan.delivery.ui.fragments.BeClient"
        android:label="fragment_be_client"
        tools:layout="@layout/fragment_be_client" />
    <fragment
        android:id="@+id/customOrderNewFragment"
        android:name="arpan.delivery.ui.custom.CustomOrderNewFragment"
        android:label="fragment_custom_order_new"
        tools:layout="@layout/fragment_custom_order_new">
        <action
            android:id="@+id/action_customOrderFragment_to_OrderHistoryFragment"
            app:destination="@id/orderHistoryFragment"
            app:popUpTo="@+id/home_activity_navigation"/>
    </fragment>
    <fragment
        android:id="@+id/medicineNewFragment"
        android:name="arpan.delivery.ui.custom.MedicineNewFragment"
        android:label="fragment_medicine_new"
        tools:layout="@layout/fragment_medicine_new" >
        <action
            android:id="@+id/action_medicineFragment_to_OrderHistoryFragment"
            app:destination="@id/orderHistoryFragment"
            app:popUpTo="@+id/home_activity_navigation"/>
    </fragment>
    <fragment
        android:id="@+id/parcelNewFragment"
        android:name="arpan.delivery.ui.custom.ParcelNewFragment"
        android:label="fragment_parcel_new"
        tools:layout="@layout/fragment_parcel_new" >
        <action
            android:id="@+id/action_parcelFragment_to_OrderHistoryFragment"
            app:destination="@id/orderHistoryFragment"
            app:popUpTo="@+id/home_activity_navigation"/>
    </fragment>
</navigation>